tlm-solutions.bureaucrat.02da90bfb8f69b8be6369b4600300752fcdd3841
Running as unit: run-p247508-i4441240.scope; invocation ID: 09a4bdbf5c4c40c7b081123f3a109c4c
   Compiling proc-macro2 v1.0.103
   Compiling quote v1.0.42
   Compiling unicode-ident v1.0.22
   Compiling libc v0.2.177
   Compiling serde_core v1.0.228
    Checking bytes v1.11.0
    Checking itoa v1.0.15
    Checking cfg-if v1.0.4
    Checking pin-project-lite v0.2.16
    Checking memchr v2.7.6
    Checking futures-core v0.3.31
    Checking smallvec v1.15.1
    Checking once_cell v1.21.3
    Checking stable_deref_trait v1.2.1
   Compiling pkg-config v0.3.32
    Checking futures-sink v0.3.31
    Checking http v1.4.0
    Checking equivalent v1.0.2
    Checking hashbrown v0.16.1
   Compiling either v1.15.0
   Compiling syn v2.0.111
    Checking tracing-core v0.1.35
    Checking socket2 v0.6.1
    Checking mio v1.1.0
    Checking slab v0.4.11
    Checking http-body v1.0.1
   Compiling shlex v1.3.0
    Checking pin-utils v0.1.0
   Compiling find-msvc-tools v0.1.5
   Compiling anyhow v1.0.100
    Checking percent-encoding v2.3.2
    Checking tower-service v0.3.3
   Compiling cc v1.2.48
    Checking futures-task v0.3.31
    Checking futures-io v0.3.31
   Compiling vcpkg v0.2.15
   Compiling serde v1.0.228
    Checking futures-util v0.3.31
   Compiling itertools v0.14.0
    Checking log v0.4.28
   Compiling httparse v1.10.1
    Checking indexmap v2.12.1
   Compiling typenum v1.19.0
   Compiling openssl-sys v0.9.111
   Compiling version_check v0.9.5
    Checking writeable v0.6.2
    Checking litemap v0.8.1
   Compiling generic-array v0.14.7
    Checking try-lock v0.2.5
   Compiling icu_normalizer_data v2.1.1
   Compiling icu_properties_data v2.1.1
    Checking atomic-waker v1.1.2
    Checking fnv v1.0.7
   Compiling bitflags v2.10.0
   Compiling autocfg v1.5.0
    Checking want v0.3.1
    Checking futures-channel v0.3.31
   Compiling num-traits v0.2.19
    Checking sync_wrapper v1.0.2
   Compiling rustix v1.1.2
   Compiling heck v0.5.0
   Compiling parking_lot_core v0.9.12
    Checking tower-layer v0.3.3
   Compiling prettyplease v0.2.37
   Compiling getrandom v0.3.4
   Compiling pulldown-cmark v0.13.0
    Checking httpdate v1.0.3
    Checking http-body-util v0.1.3
   Compiling strsim v0.11.1
    Checking foreign-types-shared v0.1.1
   Compiling unicase v2.8.1
   Compiling regex-syntax v0.8.8
    Checking base64 v0.22.1
   Compiling openssl v0.10.75
   Compiling linux-raw-sys v0.11.0
   Compiling ident_case v1.0.1
    Checking scopeguard v1.2.0
   Compiling synstructure v0.13.2
    Checking ipnet v2.11.0
   Compiling darling_core v0.21.3
   Compiling regex-automata v0.4.13
    Checking lock_api v0.4.14
    Checking foreign-types v0.3.2
   Compiling zerofrom-derive v0.1.6
   Compiling tokio-macros v2.6.0
   Compiling yoke-derive v0.8.1
   Compiling zerovec-derive v0.11.2
    Checking tokio v1.48.0
   Compiling tracing-attributes v0.1.31
    Checking zerofrom v0.1.6
   Compiling displaydoc v0.2.5
    Checking yoke v0.8.1
   Compiling serde_derive v1.0.228
   Compiling prost-derive v0.14.1
    Checking zerovec v0.11.5
    Checking zerotrie v0.2.3
   Compiling openssl-macros v0.1.1
    Checking tinystr v0.8.2
    Checking tracing v0.1.43
    Checking potential_utf v0.1.4
    Checking icu_locale_core v2.1.1
    Checking icu_collections v2.1.1
    Checking mime v0.3.17
   Compiling fixedbitset v0.5.7
    Checking icu_provider v2.1.1
    Checking ryu v1.0.20
    Checking icu_normalizer v2.1.1
   Compiling prost v0.14.1
    Checking icu_properties v2.1.1
   Compiling fastrand v2.3.0
   Compiling native-tls v0.2.14
    Checking subtle v2.6.1
   Compiling zerocopy v0.8.30
   Compiling prost-types v0.14.1
   Compiling tempfile v3.23.0
    Checking idna_adapter v1.2.1
   Compiling petgraph v0.7.1
    Checking parking_lot v0.12.5
   Compiling darling_macro v0.21.3
    Checking tokio-util v0.7.17
   Compiling regex v1.12.2
    Checking h2 v0.4.12
    Checking tower v0.5.2
   Compiling pulldown-cmark-to-cmark v21.1.0
    Checking crypto-common v0.1.7
    Checking block-buffer v0.10.4
    Checking form_urlencoded v1.2.2
    Checking aho-corasick v1.1.4
    Checking utf8_iter v1.0.4
    Checking openssl-probe v0.1.6
   Compiling multimap v0.10.1
   Compiling prost-build v0.14.1
    Checking idna v1.1.0
    Checking digest v0.10.7
   Compiling darling v0.21.3
    Checking scheduled-thread-pool v0.2.7
    Checking axum-core v0.5.5
    Checking hyper v1.8.1
   Compiling pin-project-internal v1.1.10
   Compiling tonic-build v0.14.2
    Checking hyper-util v0.1.18
   Compiling pq-sys v0.7.5
    Checking matchit v0.8.4
   Compiling thiserror v1.0.69
   Compiling serde_json v1.0.145
   Compiling diesel_derives v2.3.5
    Checking pin-project v1.1.10
   Compiling tonic-prost-build v0.14.2
    Checking ppv-lite86 v0.2.21
   Compiling uuid v1.18.1
    Checking tokio-native-tls v0.3.1
    Checking r2d2 v0.8.10
   Compiling dsl_auto_type v0.2.0
    Checking url v2.5.7
    Checking tokio-stream v0.1.17
   Compiling thiserror-impl v1.0.69
   Compiling async-trait v0.1.89
    Checking rand_core v0.9.3
   Compiling diesel_table_macro_syntax v0.3.0
    Checking hyper-timeout v0.5.2
    Checking rand_core v0.6.4
    Checking zeroize v1.8.2
    Checking utf8parse v0.2.2
    Checking iri-string v0.7.9
    Checking iana-time-zone v0.1.64
    Checking cpufeatures v0.2.17
    Checking base64ct v1.8.0
    Checking chrono v0.4.42
    Checking password-hash v0.5.0
    Checking sha2 v0.10.9
    Checking anstyle-parse v0.2.7
    Checking rustls-pki-types v1.13.1
    Checking rand_chacha v0.9.0
    Checking hyper-tls v0.6.0
   Compiling tlms v0.10.0 (https://github.com/tlm-solutions/tlms.rs#b5dc3508)
   Compiling utoipa-gen v5.4.0
    Checking axum v0.8.7
    Checking tower-http v0.6.7
    Checking hmac v0.12.1
    Checking serde_urlencoded v0.7.1
    Checking num-integer v0.1.46
   Compiling struct-field-names-as-array-derive v0.3.0
    Checking encoding_rs v0.8.35
    Checking is_terminal_polyfill v1.70.2
    Checking byteorder v1.5.0
    Checking colorchoice v1.0.4
    Checking anstyle-query v1.1.5
    Checking anstyle v1.0.13
    Checking downcast-rs v2.0.2
    Checking struct-field-names-as-array v0.3.0
    Checking num-bigint v0.4.6
    Checking anstream v0.6.21
    Checking pbkdf2 v0.12.2
    Checking rand v0.9.2
    Checking reqwest v0.12.24
   Compiling securefmt v0.1.5
    Checking env_filter v0.1.4
   Compiling num-derive v0.4.2
    Checking combine v4.6.7
    Checking jiff v0.2.16
    Checking sha1_smol v1.0.1
    Checking diesel v2.3.4
    Checking utoipa v5.4.0
    Checking env_logger v0.11.8
    Checking tonic v0.14.2
    Checking tonic-prost v0.14.2
    Checking redis v0.32.7
error[E0271]: type mismatch resolving `<DB as TypeMetadata>::MetadataLookup == &mut <DB as TypeMetadata>::MetadataLookup`
   --> /home/adwin/.cargo/registry/src/mirrors.tuna.tsinghua.edu.cn-4dc01642fd091eda/diesel-2.3.4/src/query_builder/ast_pass.rs:228:51
    |
228 |             } => collector.push_bound_value(bind, metadata_lookup)?,
    |                                                   ^^^^^^^^^^^^^^^ types differ

For more information about this error, try `rustc --explain E0271`.
error: could not compile `diesel` (lib) due to 1 previous error
